# docprompt

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  main.py  pyproject.toml
docprompt/: hook.py
tests/: test_hook.py
